add seo friendly url

--- a/Views/JsonDemo/Index.cshtml
+++ b/Views/JsonDemo/Index.cshtml
@@ -29,7 +29,7 @@
             traditional: true,
             async: false,
             cache: false,
-            url: '/JsonDemo/UpdateUsersDetail',
+            url: 'http://localhost:44300/JsonDemo/UpdateUsersDetail',
             context: document.body,
             data: getReportColumnsParams,
             success: function (result) {
