--- a/Views/News/Details.cshtml
+++ b/Views/News/Details.cshtml
@@ -1,4 +1,4 @@
-﻿@model MVC5.Models.SAK
+﻿@model MVC5.Models.News
 
 @{
     ViewBag.Title = "Details";
@@ -8,55 +8,39 @@
 <h2>Details</h2>
 
 <div>
-    <h4>SAK</h4>
+    <h4>News</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.Parent.Nama)
+            @Html.DisplayNameFor(model => model.Header)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.Parent.Nama)
+            @Html.DisplayFor(model => model.Header)
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.Sk.Nama)
+            @Html.DisplayNameFor(model => model.Content)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.Sk.Nama)
+            @Html.DisplayFor(model => model.Content)
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.Nama)
+            @Html.DisplayNameFor(model => model.Link)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.Nama)
+            @Html.DisplayFor(model => model.Link)
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.Kod)
+            @Html.DisplayNameFor(model => model.active)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.Kod)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Perihal)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Perihal)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.StatusActive)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.StatusActive)
+            @Html.DisplayFor(model => model.active)
         </dd>
 
         <dt>
