--- a/Views/Exception/NotFound.cshtml
+++ b/Views/Exception/NotFound.cshtml
@@ -1,7 +1,7 @@
 ﻿
 @{
     ViewBag.Title = "NotFound";
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    Layout = "~/Views/Shared/_LayoutAdmin.cshtml";
 }
 
 <h1 class="text-danger">404.</h1>
