add membership tbl

--- a/Views/Listing/Details.cshtml
+++ b/Views/Listing/Details.cshtml
@@ -97,7 +97,7 @@
 
                 <div class="col-lg-9 ">
                     <h2 id="forms-example">@Model.listing.Address1</h2>
-                    <h4>@Model.listing.PropertyType.Nama</h4>
+                    <h4>@Model.listing.PropertyType.Nama (@ViewBag.ListingViewCount Views)</h4>
                     <div class="blog-item">
                         <div class="row">
 
